force-app/main/default/objects/Interview__c/Interview__c.object-meta.xml
<CustomObject>
    <description>Custom object to track interview information for the Recruiter Portal</description>
    <label>Interview</label>
    <nameField>
        <label>Interview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>