force-app/main/default/objects/Interview__c/fields/Candidate_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the candidate has confirmed their attendance for the interview</description>
    <label>Candidate Confirmed</label>
    <type>Checkbox</type>
</CustomField>