force-app/main/default/objects/Interview__c/fields/Date_Time_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Scheduled__c</fullName>
    <label>Date/Time Scheduled</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>