force-app/main/default/objects/Interview__c/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <label>Interview Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ci-First</fullName>
            </value>
            <value>
                <fullName>Align-2nd</fullName>
            </value>
            <value>
                <fullName>Plan-3rd</fullName>
            </value>
            <value>
                <fullName>Present-4th</fullName>
            </value>
            <value>
                <fullName>Optional-5th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>