force-app/main/default/objects/Interview__c/fields/Interviewer_s__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_s__c</fullName>
    <description>This is the multipicklist field that designates the interviewer or interviewers who cunducted this interview. Use this to calculate the interviewer for the Interview Leaderboard.</description>
    <label>Interviewer/s</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bradley Sofonia</fullName>
            </value>
            <value>
                <fullName>Elizabeth Kagele</fullName>
            </value>
            <value>
                <fullName>Michael Yang</fullName>
            </value>
            <value>
                <fullName>Rachyll Tenny</fullName>
            </value>
            <value>
                <fullName>Scott Grove</fullName>
            </value>
            <value>
                <fullName>Son Le</fullName>
            </value>
            <value>
                <fullName>Tim Denton</fullName>
            </value>
            <value>
                <fullName>Van Hess</fullName>
            </value>
            <value>
                <fullName>Brooke Ianni</fullName>
            </value>
            <value>
                <fullName>Diljeet Masuda</fullName>
            </value>
            <value>
                <fullName>Jonathan Gruber</fullName>
            </value>
            <value>
                <fullName>Scott Primm</fullName>
            </value>
            <value>
                <fullName>Simon Reyes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>