force-app/main/default/objects/Interview__c/fields/Related_Event__c.field-meta.xml
<CustomField>
    <fullName>Related_Event__c</fullName>
    <label>Related Event</label>
    <referenceTo>Event</referenceTo>
    <relationshipName>Interviews</relationshipName>
    <relationshipLabel>Interviews</relationshipLabel>
    <type>Lookup</type>
</CustomField>