force-app/main/default/objects/Interview__c/fields/Reminder_48hr_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_48hr_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks whether 48-hour interview reminder email has been sent to candidate</description>
    <label>48hr Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>