force-app/main/default/objects/Interview__c/listViews/All_Interviews.listView-meta.xml
<ListView>
    <fullName>All_Interviews</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Candidate_Confirmed__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>Date_Time_Scheduled__c</columns>
    <columns>Interview_Status__c</columns>
    <columns>Interview_Type__c</columns>
    <columns>Interviewer_s__c</columns>
    <columns>Outcome__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Interviews</label>
</ListView>