force-app/main/default/objects/Interview__c/listViews/Completed_Interviews_This_Month.listView-meta.xml
<ListView>
    <fullName>Completed_Interviews_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Date_Time_Scheduled__c</columns>
    <columns>Interview_Status__c</columns>
    <columns>Interview_Type__c</columns>
    <columns>Notes__c</columns>
    <columns>Outcome__c</columns>
    <columns>Interviewer_s__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Completed__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Interview_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Interviews This Month</label>
</ListView>